--- a/build
+++ b/build
@@ -27,15 +27,15 @@ TRACE = 5
 
 def main():
     parser = argparse.ArgumentParser(description=__doc__)
-    parser.add_argument("--passwords",
-                        help="file to read/write password"
+    parser.add_argument("--settings",
+                        help="file to read/write settings"
                              " information into/from (default=%(default)s)",
-                        default=os.path.join(os.getcwd(), "passwords.yaml"),
+                        default=os.path.join(os.getcwd(), "settings.sh"),
                         metavar="PATH")
     parser.add_argument("--tracker",
                         help="file to read/write action tracking"
                              " information into/from (default=%(default)s)",
-                        default=os.path.join(os.getcwd(), "actions.log"),
+                        default=os.path.join(os.getcwd(), "tracker.log"),
                         metavar="PATH")
     parser.add_argument("-v", "--verbose",
                         help=("run in verbose mode (may be specified more"
